add html controls structure

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	
 	<!-- START main site wrapper -->
 	<div id="wrapper">
+
 		<!-- START site header  -->
 		<header class="site-title">
 			<h1>Pomodoro Timer</h1>
@@ -21,7 +22,31 @@
 
 		<!-- START pomodoro timer controls -->
 		<section class='controls-container'>
-			
+
+			<!-- START controls box -->
+			<div class="controls-box">
+
+				<div class="controls">
+					<p class='controls-label'>Session Length</p>
+					<div class='controls-info'>
+						<span class='controls-down'>-</span>
+						<span class='controls-value'>25</span>
+						<span class='controls-up'>+</span>
+					</div>
+				</div>
+
+				<div class="controls">
+					<p class='controls-label'>Break Length</p>
+					<div class='controls-info'>
+						<span class='controls-down'>-</span>
+						<span class='controls-value'>5</span>
+						<span class='controls-up'>+</span>
+					</div>
+				</div>
+
+			</div>
+			<!-- END controls box -->
+
 		</section>
 		<!-- END pomodoro timer controls -->
 		
@@ -37,6 +62,7 @@
 			<small>The coolest guy in the universe</small>
 		</footer>
 		<!-- END site footer -->
+		
 	</div>
 	<!-- END main site wrapper -->
 
