add html timer structure

--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
 		
 		<!-- START main timer box -->
 		<section class='main'>
-			
+
+			<div class="timer-box">
+				<h2 class='current-mode-label'>Session</h2>
+				<h3>20:00</h3>
+			</div>
+
 		</section>
 		<!-- END main timer box -->
 		
@@ -62,7 +67,7 @@
 			<small>The coolest guy in the universe</small>
 		</footer>
 		<!-- END site footer -->
-		
+
 	</div>
 	<!-- END main site wrapper -->
 
