add basic styles

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 						<span class='controls-up'>+</span>
 					</div>
 				</div>
+				<div style='clear: both;'></div>
 
 			</div>
 			<!-- END controls box -->
