add styles for control-btn and add control time session, brea<k functionality

--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
 				<div class="controls" id='session'>
 					<p class='controls-label'>Session Length</p>
 					<div class='controls-info'>
-						<span class='controls-down'>-</span>
+						<button class='controls-down'>-</button>
 						<span class='controls-value'>25</span>
-						<span class='controls-up'>+</span>
+						<button class='controls-up'>+</button>
 					</div>
 				</div>
 
 				<div class="controls" id='break'>
 					<p class='controls-label'>Break Length</p>
 					<div class='controls-info'>
-						<span class='controls-down'>-</span>
+						<button class='controls-down'>-</button>
 						<span class='controls-value'>5</span>
-						<span class='controls-up'>+</span>
+						<button class='controls-up'>+</button>
 					</div>
 				</div>
 				<div style='clear: both;'></div>
@@ -72,10 +72,11 @@
 
 	</div>
 	<!-- END main site wrapper -->
+	
 
 	<!-- import jQuery -->
 	<script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
-
+	
 	<!-- JS -->
 	<script src='app/app.js'></script>
 </body>
