add feature that timer cant be changed when it's started

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 		<!-- START footer site -->
 		<footer>
 			<p>Created by Emil Pausz</p>
-			<small>The coolest guy in the universe</small>
+			<small>The coolest guy in the universe</small> <br>	
+			<small><a href="http://www.freepik.com" target="_blank">Selected by freepik</a></small>
 		</footer>
 		<!-- END site footer -->
 
