update styles and add info about freepik

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 		<footer>
 			<p>Created by Emil Pausz</p>
 			<small>The coolest guy in the universe</small> <br>	
+			<small><a href="https://github.com/legendemil/pomodoro_clock" target="_blank">Github Repo</a></small> |
 			<small><a href="http://www.freepik.com" target="_blank">Selected by freepik</a></small>
 		</footer>
 		<!-- END site footer -->
