add alarm sound functionility

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
 	</div>
 	<!-- END main site wrapper -->
 	
+	<audio id='alarm-sound'>
+		<source src="sound/deadpool.mp3" type="audio/mp3" >
+	</audio>
 
 	<!-- import jQuery -->
 	<script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
